
=======
Changes
=======

0.1.0
==========

 - added pyflakes module