@@ -1,5 +1,5 @@
 from doitpy.pyflakes import Pyflakes
-from doitpy.coverage import Coverage
+from doitpy.coverage import PythonPackage, Coverage
 
 
 DOIT_CONFIG = {'default_tasks': ['pyflakes']}
@@ -10,8 +10,8 @@ def task_pyflakes():
 
 
 def task_coverage():
-    cov = Coverage(source='doitpy', test='tests')
+    cov = Coverage([PythonPackage('doitpy', test_path='tests')],
+                   omit=['"tests/sample_*"'])
     yield cov.all()
     yield cov.src()
     yield cov.by_module()
-
